meccanismo di autenticazione google auth e generazione del token JWT
