# source/backend/routes/review.js
@@ -3,8 +3,8 @@ import Review from "../models/Review.js";
 
 const router = express.Router();
 
-// POST /api/reviews - Creazione di una nuova recensione
-router.post("/reviews", async (req, res) => {
+// POST /api/ - Creazione di una nuova recensione
+router.post("/", async (req, res) => {
   try {
     // Ottieni i dettagli della recensione dalla richiesta del cliente
     const {
@@ -23,7 +23,7 @@ router.post("/reviews", async (req, res) => {
     // Crea una nuova recensione
     const nuovaRecensione = new Review({
       // autore: req.utenteAutenticato._id, // _id dell'utente autenticato
-      autore: '65fe050c5aeb05d86b6f89e4', // SOLO PER TESTING
+      autore: "65fe050c5aeb05d86b6f89e4", // SOLO PER TESTING
       data: Date.now(),
       professore,
       esame,
@@ -48,7 +48,7 @@ router.post("/reviews", async (req, res) => {
 });
 
 // Restituisce tutte le recensioni
-router.get("/reviews", async (req, res) => {
+router.get("/", async (req, res) => {
   try {
     const reviews = await Review.find();
     res.status(200).json(reviews);
@@ -59,7 +59,7 @@ router.get("/reviews", async (req, res) => {
 });
 
 // Rimuovi recensione per ID
-router.delete("/reviews/:reviewId", async (req, res) => {
+router.delete("/:reviewId", async (req, res) => {
   try {
     const { reviewId } = req.params;
     await Review.findByIdAndDelete(reviewId);
@@ -71,7 +71,7 @@ router.delete("/reviews/:reviewId", async (req, res) => {
 });
 
 // Restituisce una recensione per ID
-router.get("/reviews/:reviewId", async (req, res) => {
+router.get("/:reviewId", async (req, res) => {
   try {
     const { reviewId } = req.params;
     const review = await Review.findById(reviewId);
@@ -86,11 +86,13 @@ router.get("/reviews/:reviewId", async (req, res) => {
 });
 
 // Modifica recensione esistente per ID
-router.patch("/reviews/:reviewId", async (req, res) => {
+router.patch("/:reviewId", async (req, res) => {
   try {
     const { reviewId } = req.params;
     const updateData = req.body;
-    const updatedReview = await Review.findByIdAndUpdate(reviewId, updateData, { new: true });
+    const updatedReview = await Review.findByIdAndUpdate(reviewId, updateData, {
+      new: true,
+    });
     if (!updatedReview) {
       return res.status(404).json({ error: "Recensione non trovata" });
     }
@@ -100,6 +102,5 @@ router.patch("/reviews/:reviewId", async (req, res) => {
     res.status(500).json({ error: "Errore del server" });
   }
 });
-
 
 export default router;
